# edgi-scripts

./: .editorconfig  .env.sample  .gdrive-upload-credentials.json.enc  .gitignore  .travis.yml  .youtube-upload-credentials.json.enc  CONTRIBUTING.md  Makefile  README.md  client_secret.json.enc  gdrive-locations.json.enc  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/: config.yml  settings.yml
.github/workflows/: zoom-upload.yml
scripts/: archive.sh  auth.py  basic_youtube_upload.py  constants.py  convert_transcript_timestamps.py  ia_healthcheck.py  playlists.py  upload_zoom_recordings.py  upload_zoom_recordings.sh
scripts/lib/: basic_youtube_upload.py  constants.py  gdrive.py  youtube.py  zoom.py
